tests/functional/lang/eval-fail-home-path-fatal.err
error: home path literals are not portable. Consider replacing path literal '~/foo' by a string, relative path, or parameter (lint-absolute-path-literals)
       at /pwd/lang/eval-fail-home-path-fatal.nix:1:1:
            1| ~/foo
             | ^
            2|
